--- a/styles/index_style.css
+++ b/styles/index_style.css
@@ -6,12 +6,12 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #ECF6FE;
 }
 
 .navbar1 {
     background: #2e2e2e;
-    color: white;
+    color: #ECF6FE;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -181,13 +181,17 @@ body {
 }
 
 .menu-items li a:hover {
-    background-color: #34495e;
-    color: #fff;
+    background-color: #ECF6FE;
+    color: #000000;
+    width: 235px;
+    border-radius: 100px 0px 0px 100px;
 }
 
 .menu-items li.active a  {
-    background-color: #3498db;
-    color: white;
+    background-color: #ECF6FE;
+    color: rgb(0, 0, 0);
+    width: 235px;
+    border-radius: 100px 0px 0px 100px;
 }
 
 
@@ -200,7 +204,7 @@ body {
 .main-content {
     flex: 1;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #ECF6FE;
 }
 
 .table-container {
